# EventBus

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  User.cmake  build.bat  build.sh  clean.sh
.github/workflows/: linux.yml  windows.yml
3rd/: .gitignore  CMakeLists.txt  diff_open_source.txt  download_url.txt  remove_cache.sh
docs/: bus.drawio  rpc_design.drawio  supported_list.md
include/: BusActor.hpp  BusActorBase.hpp  BusDebugger.hpp  BusEvent.hpp  BusGroup.hpp  BusHandler.hpp  BusMailOffice.hpp  BusMailbox.hpp  BusMailman.hpp  BusManager.hpp  BusMap.hpp  BusTrait.hpp  BusTraitBase.hpp  EventBus.hpp  RpcAsyncBroadcast.hpp  RpcBasicTemplate.hpp  RpcStandardRequest.hpp  RpcStandardResponse.hpp  Singleton.hpp  TiBus.hpp  TiBusUtils.hpp
include/common/: Action.hpp  Any.hpp  Binder.hpp  DllWrapper.hpp  GlobalSingleton.hpp  GlobalSingletonContext.hpp  GlobalSingletonInstance.hpp  NonCopyable.hpp  Singleton.hpp
include/communicate/: Broker.hpp  CommunicateContext.hpp  CommunicationCode.hpp  Communicator.hpp  Publisher.hpp  Requester.hpp  Responder.hpp  Subscriber.hpp
include/serialize/: SerializeHeaders.hpp  SerializeProcesser.hpp  Serializer.hpp
include/tools/: encryption_keygen_core.h  hosts_broker_core.h  local_broker_core.h
include/utils/: ApplicationFramework.h  ApplicationFramework.hpp  ClockBus.h  ErrorHandler.hpp  EventBusUtils.hpp  TiBusUtils.hpp  TickBus.h  TickBus.hpp
include/utils/extras/: ErrorHandler.hpp
include/utils/framework/: AppFw.hpp  TickBus.hpp
sample/: CMakeLists.txt  build.sh  clean.sh  prerun_on_linux.txt
sample/01_event_bus_simple_demo/: CMakeLists.txt
sample/01_event_bus_simple_demo/bus_def/: HostsProcessBus.h  InProcessBus.h  LocalProcessBus.h
sample/01_event_bus_simple_demo/worker1/: worker1.cpp
sample/01_event_bus_simple_demo/worker2/: worker2.cpp
sample/02_easy_rpc_simple_demo/: CMakeLists.txt
sample/02_easy_rpc_simple_demo/client/: client.cpp
sample/02_easy_rpc_simple_demo/server/: server.cpp
script/: build_mingw.bat  build_msvc.bat  ci.bat  config.bat  diff_open_source.txt  extract_open_source.ps1  extract_open_source_and_patch.bat
script/patches/: 0001.patch  0002.patch
source/: CMakeLists.txt
source/test/: CMakeLists.txt
source/tools/: CMakeLists.txt
source/tools/config_center_simple/: CMakeLists.txt
source/tools/encryption_keygen_core/: CMakeLists.txt  encryption_keygen_core.cpp
source/tools/encryption_keygen_simple/: CMakeLists.txt  encryption_keygen_simple.cpp
source/tools/hosts_broker_core/: CMakeLists.txt  hosts_broker_core.cpp
source/tools/hosts_broker_simple/: CMakeLists.txt  Main.cpp  hosts_broker_simple.cpp
source/tools/local_broker_core/: CMakeLists.txt  local_broker_core.cpp
source/tools/local_broker_simple/: CMakeLists.txt  local_broker_simple.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/communicate/: CommunicationCode.hpp  Communicator.hpp  Publisher.h  Requester.h  Responder.h  Subscriber.h
src/common/serialize/: Serializer.hpp  SupportType.hpp
src/config_center/: CMakeLists.txt  Main.cpp
src/encryption_keygen/: Main.cpp
src/hosts_broker/: Main.cpp
src/launcher/: CMakeLists.txt  Main.cpp
src/local_broker/: Main.cpp
src/router/: CMakeLists.txt
src/singleton_manager/: CMakeLists.txt  SingletonManager.cpp
src/topicer/: CMakeLists.txt
